slate declare and got data on the console

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,11 @@
     -->
     <title>React App</title>
 
-    <style></style>
+    <style>
+      body {
+        background-color: #f3f4f6;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
